Improvements in WeatherForecast.
Old Forecasts are not displayed.
Modified default DATE_FORMAT to only include the date (no time).